# GNNBenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docker/: Dockerfile  README.md
docker/install/: ubuntu_install_core.sh  ubuntu_install_python.sh  ubuntu_install_python_package.sh
scripts/: bench_dense_mm.py  gen_dgl_graph.py
test-gpu/: bench_spmm.py  gcn.py
tests/: CMakeLists.txt  samples_io.h  samples_utils.h  spmm.cc  spmm.h
tests-gpu/: bench_spmm.py  gcn.py
